--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Movies</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
       (function (l) {
